k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: now-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: now-prod
